# ged_io

./: Cargo.toml  MIGRATION.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: memory.rs  parsing.rs  tokenizer.rs
src/: bin.rs  builder.rs  data.rs  debug.rs  display.rs  encoding.rs  error.rs  gedcom.rs  gedzip.rs  indexed.rs  lib.rs  parser.rs  stream.rs  tokenizer.rs  types.rs  util.rs  version.rs  writer.rs
src/types/: address.rs  corporation.rs  custom.rs  date.rs  event.rs  family.rs  gedcom7.rs  header.rs  individual.rs  lds.rs  multimedia.rs  note.rs  place.rs  repository.rs  shared_note.rs  source.rs  submission.rs  submitter.rs  translation.rs
src/types/date/: change_date.rs
src/types/event/: detail.rs  family.rs  spouse.rs  util.rs
src/types/header/: encoding.rs  meta.rs  place.rs  schema.rs  source.rs
src/types/header/source/: data.rs
src/types/individual/: association.rs  attribute.rs  family_link.rs  gender.rs  name.rs
src/types/individual/attribute/: detail.rs
src/types/individual/family_link/: adopted.rs  child_link.rs  pedigree.rs
src/types/multimedia/: file.rs  format.rs  link.rs  user.rs
src/types/repository/: citation.rs
src/types/source/: citation.rs  data.rs  quay.rs  text.rs
src/types/source/citation/: data.rs
tests/: backward_compatibility.rs  clone_trait.rs  common.rs  convenience_methods.rs  encoding.rs  gedcom_7.rs  json_feature.rs  lib.rs  malformed_input.rs  partial_eq.rs  round_trip.rs
