[package]
name = "ged_io"
version = "0.1.0"
authors = ["Robert Pirtle <astropirtle@gmail.com>", "Jacob Benison <ge3224@gmail.com>"]
description = "A parser for GEDCOM files"
keywords = ["genealogy", "gedcom", "parser", "gedcom-parser", "family-trees"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ge3224/ged-io"
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
default = []
json = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0.123"

[lib]
name = "ged_io"
path = "src/lib.rs"

[[bin]]
name = "ged_bin"
path = "src/bin.rs"
